<resources>
    <string name="app_name">FamilyTrack</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="popup_menu_item_user_details" translatable="true" >Details</string>
    <string name="popup_menu_item_show_on_map" translatable="true" >Show on map</string>
    <string name="popup_menu_item_remove" translatable="true" >Remove</string>
    <string name="E1001" translatable="true" >Group with specified uuid not found</string>
    <string name="E1002" translatable="true" >User with specified uuid not found</string>
    <string name="E1003" translatable="true" >Remove user failed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open" translatable="true" >Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true" >Close navigation drawer</string>
    <string name="action_example" translatable="true" >Example action</string>
    <string name="action_settings" translatable="true" >Settings</string>
    <string name="action_save" translatable="true" >Save</string>
    <string name="action_exclude" translatable="true" >Remove</string>
    <string name="textview_tracking_mode" translatable="true" >Tracking mode is</string>
    <string name="text_view_tracking_mode_description" translatable="true" >Set tracking mode to on or off</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget" translatable="true" >Add widget</string>
    <string name="ROLE_1">Admin</string>
    <string name="ROLE_2">Member</string>
    <string name="ROLE_3">Undefined</string>
    <string name="toolbar_title_user_list" translatable="true" >User list</string>
    <string name="toolbar_title_history_chart" translatable="true" >History chart</string>
    <string name="toolbar_title_map" translatable="true" >Map</string>
    <string name="toolbar_title_geofence_events" translatable="true" >Geofence events</string>
    <string name="toolbar_title_membership" translatable="true" >Memberships</string>
    <string name="ex_no_user_uuid_in_intent" translatable="true" >Current user uuid expected but not found in intent</string>
    <string name="ex_unsupported_content_id" translatable="true" >Unsupported content id=</string>
    <string name="ex_null_intent" translatable="true" >Intent is null</string>
    <string name="label_test_user_display_name">Dmitry Volynski</string>
    <string name="label_test_email">volynski@hotmail.com</string>
    <string name="label_update_interval" translatable="true" >Update interval</string>
    <string name="label_update_interval_descr" translatable="true" >Location update frequency in minutes</string>
    <string name="label_settings_update_interval" translatable="true" >Settings update interval</string>
    <string name="label_settings_update_interval_descr" translatable="true" >Settings update frequency in minutes</string>
    <string name="label_location_accuracy" translatable="true" >Location accuracy</string>
    <string name="label_location_accuracy_descr" translatable="true" >Location accuracy is set to maximum</string>
    <string name="label_simulation_mode" translatable="true" >Simulation mode is</string>
    <string name="label_simulation_mode_descr" translatable="true" >Allow to turn on moving simulation</string>
    <string name="label_group" translatable="true" >Group</string>
    <string name="label_test_group_name" translatable="true" >Group name</string>
    <string name="label_create_group_dialog_text" translatable="true" >Please specify a name for a new group\n\nAfter creation you will be an Admin for newly created group. Your Admin role for the current group will be lost</string>
    <string name="label_welcome_to_familytrack" translatable="true" >Welcome to FamilyTrack!\n\nIn order to start using app please provide your phone number</string>
    <string name="label_now_decide_how" translatable="true" >Now decide how you want to start app\n\nYou could create new group, join existing group or decide anytime later</string>
    <string name="label_radio_create" translatable="true" >CREATE</string>
    <string name="label_radio_join" translatable="true" >JOIN</string>
    <string name="label_radio_later" translatable="true" >LATER</string>
    <string name="label_button_next" translatable="true" >NEXT</string>
    <string name="label_no_groups_available" translatable="true" >No groups available to join now</string>
    <string name="label_new_group_details" translatable="true" >You will create new group and become an Admin of this group. You\'ll be able to manage users and control some options</string>
    <string name="label_button_decide" translatable="true" >DECIDE</string>
    <string name="label_button_invite" translatable="true" >Invite</string>
    <string name="label_button_cancel" translatable="true" >Cancel</string>
    <string name="label_edit_geofence_data" translatable="true" >Edit geofence data</string>
    <string name="label_button_save" translatable="true" >SAVE</string>
    <string name="label_lat_long">Lat/Long</string>
    <string name="label_user_not_a_member_of_any_group" translatable="true" >User not a member of any group</string>
    <string name="hint_family_name" translatable="true" >Family name</string>
    <string name="hint_given_name" translatable="true" >Given name</string>
    <string name="hint_display_name" translatable="true" >Display name</string>
    <string name="hint_phone" translatable="true" >Phone</string>
    <string name="hint_group_name" translatable="true" >Group name</string>
    <string name="hint_phone_number" translatable="true" >Enter your phone number</string>
    <string name="hint_new_group_name" translatable="true" >Enter new group name</string>
    <string name="hint_enter_search_string" translatable="true" >Start enter name/email/phone number</string>
    <string name="hint_geofence_name" translatable="true" >Geofence name</string>
    <string name="content_descr_application_logo" translatable="true" >Application logotype</string>
    <string name="content_descr_application_symbol" translatable="true" >Application symbol</string>
    <string name="content_descr_sign_in_button" translatable="true" >Sign in button</string>
    <string name="content_descr_floating_action_button" translatable="true" >Floating action button</string>
    <string name="content_descr_switch_tracking_mode" translatable="true" >Switch to turn tracking mode on or off</string>
    <string name="content_descr_location_update_interval" translatable="true" >Location update interval in minutes</string>
    <string name="content_descr_settings_update_interval" translatable="true" >Settings update interval in minutes</string>
    <string name="content_descr_location_accuracy_level" translatable="true" >Location accuracy level</string>
    <string name="content_descr_switch_simulation_mode" translatable="true" >Switch to turn simulation mode on or off</string>
    <string name="content_descr_user_family_name_icon" translatable="true" >User family name icon</string>
    <string name="content_descr_user_phone_number_icon" translatable="true" >User phone number icon</string>
    <string name="content_descr_user_email_icon" translatable="true" >User email icon</string>
    <string name="content_descr_user_group_name_icon" translatable="true" >User group name icon</string>
    <string name="content_descr_user_location_icon" translatable="true" >User last know location icon</string>
    <string name="content_descr_user_photo" translatable="true" >User photo</string>
    <string name="content_descr_chart" translatable="true" >User history chart</string>
    <string name="content_descr_time_period_is_off" translatable="true" >Time period is off</string>
    <string name="content_descr_time_period_is_one_hour" translatable="true" >Time period is one hour</string>
    <string name="content_descr_time_period_is_eight_hours" translatable="true" >Time period is eight hours</string>
    <string name="content_descr_time_period_is_one_day" translatable="true" >Time period is one day</string>
    <string name="content_descr_time_period_is_one_week" translatable="true" >Time period is one week</string>
    <string name="content_descr_button_to_leave_or_join_group" translatable="true" >Button to leave or join group</string>
    <string name="content_descr_image_for_contact_visualisation" translatable="true" >Image for contact visualisation</string>
    <string name="content_descr_image_for_group_visualization" translatable="true" >Image for group visualization</string>
    <string name="content_descr_options_menu_expander_symbol" translatable="true" >Options menu expander symbol</string>
    <string name="content_descr_geofence_event_switch" translatable="true" >Switch to include or exclude user for geofence event notifications</string>
    <string name="toggle_button_off">OFF</string>
    <string name="toggle_button_1h">1H</string>
    <string name="toggle_button_8h">8H</string>
    <string name="toggle_button_1d">1D</string>
    <string name="toggle_button_1w">1W</string>
    <string name="delete_current_geofence" translatable="true" >Delete current geofence</string>
    <string name="transition_name">userPhoto</string>
    <string name="msg_settings_updated" translatable="true" >Settings updated</string>
    <string name="ex_cant_cast_to_popupmenulistener" translatable="true" >List Item ViewModel couldn\'t be casted to PopupMenuListener, event lost</string>
    <string name="ex_group_with_uuid_not_found" translatable="true" >Group %1$s not found. Unable to return valid list of available contacts</string>
    <string name="new_simulated_location" translatable="true">New simulated location is %1$f/%2$f(\'%3$s\')</string>
    <string name="unknown_address" translatable="true">Unknown address</string>
    <string name="unknown_location" translatable="true">Unknown location</string>
    <string name="ex_no_current_user_uuid_key" translatable="true">Start intent doesn\'t contain CURRENT_USER_UUID_KEY. Can\'t start settings listener service</string>
    <string name="ex_user_not_found" translatable="true">User \'%1$s\' not found. Settings cleared</string>
    <string name="ex_group_uuid_is_empty" translatable="true">groupUuid is empty. No group listener was created</string>
    <string name="ex_connection_cancelled" translatable="true">Connection canceled:</string>
    <string name="ex_null_settings_received" translatable="true">Unexpected error: null settings received for group</string>
    <string name="ex_no_settings_found" translatable="true">No settings found in shared preferences. Can\'t create geofences</string>
    <string name="ex_no_geofence_in_simulation_mode" translatable="true">Simulation is on or tracking is off. No geofences created</string>
    <string name="no_access_fine_location" translatable="true">ACCESS_FINE_LOCATION not granted. Unable to use geofences</string>
    <string name="ex_unknown_geofence_transition" translatable="true">unknown geofenceTransition=</string>
    <string name="ex_no_active_membership_no_geofence" translatable="true">No active membership found. Geofence notification not created</string>
    <string name="ex_geofence_error" translatable="true">Geofence event triggered but no zones or current user data found in shared preferences</string>
    <string name="ex_intent_unknown_command" translatable="true">Intent contains unknown command:</string>
    <string name="ex_geofence_event_error" translatable="true">Error getting geofence event. Code=</string>
    <string name="ex_null_settings" translatable="true">Null settings. Can\'t start location service</string>
    <string name="geofence_notification_label" translatable="true">Geofence notification</string>
</resources>