<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.volynski.familytrack.viewmodels.UserHistoryChartViewModel"/>
    </data>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.github.mikephil.charting.charts.PieChart
                android:background="@color/itemSeparator"
                android:id="@+id/chart_frguserhistorychart"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="0dp"
                android:contentDescription="@string/content_descr_chart"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintBottom_toTopOf="@+id/verticalOneThird"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/verticalOneThird"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintGuide_percent="0.7"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="486dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_small"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/verticalOneThird">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="horizontal">
                    <TableRow>
                        <ToggleButton
                            android:contentDescription="@string/content_descr_time_period_is_off"
                            android:enabled="false"
                            android:id="@+id/tbut_off"
                            android:checked='@{viewmodel.toggleButtons["OFF"]}'
                            android:textOff="@string/toggle_button_off"
                            android:textOn="@string/toggle_button_off"
                            style="@style/ToggleButton" />

                        <ToggleButton
                            android:contentDescription="@string/content_descr_time_period_is_one_hour"
                            android:id="@+id/tbut_1h"
                            android:checked='@{viewmodel.toggleButtons["1H"]}'
                            android:textOff="@string/toggle_button_1h"
                            android:textOn="@string/toggle_button_1h"
                            style="@style/ToggleButton" />

                        <ToggleButton
                            android:contentDescription="@string/content_descr_time_period_is_eight_hours"
                            android:id="@+id/tbut_8h"
                            android:checked='@{viewmodel.toggleButtons["8H"]}'
                            android:textOff="@string/toggle_button_8h"
                            android:textOn="@string/toggle_button_8h"
                            style="@style/ToggleButton" />

                        <ToggleButton
                            android:contentDescription="@string/content_descr_time_period_is_one_day"
                            android:id="@+id/tbut_1d"
                            android:checked='@{viewmodel.toggleButtons["1D"]}'
                            android:textOff="@string/toggle_button_1d"
                            android:textOn="@string/toggle_button_1d"
                            style="@style/ToggleButton" />

                        <ToggleButton
                            android:contentDescription="@string/content_descr_time_period_is_one_week"
                            android:id="@+id/tbut_1w"
                            style="@style/ToggleButton"                             android:background="@drawable/toggle_button_selector"
                            android:checked='@{viewmodel.toggleButtons["1W"]}'
                            android:textOff="@string/toggle_button_1w"
                            android:textOn="@string/toggle_button_1w" />
                    </TableRow>
                </TableLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_frguserhistorychart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:viewModels="@{viewmodel.viewModels}"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="25dp">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>